--- a/style.css
+++ b/style.css
@@ -8,9 +8,10 @@ body {
   padding: 2rem;
 }
 
-/* All inputs other than checkboxes & radios
- * should be block display so they sit on a new line
- */
+form{
+  display:relative;
+}
+
 input:not([type="checkbox"]):not([type="radio"]),
 button,
 textarea {
